--- a/src/angular/app/index.html
+++ b/src/angular/app/index.html
@@ -13,14 +13,10 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
- 
-  <div>Angular seed app: v<span app-version></span></div>
-
- 
-  <a ui-sref="graficaDemo">Grafica</a>
-    <div class="container">
+ <a ui-sref="dashboard">Dashboard</a>
+ <a ui-sref="estadoResultados">Estado de Resultados</a>
+ <div ui-view></div>
       
-    </div>
   <script src="js/angular.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
