--- a/src/angular/app/index.html
+++ b/src/angular/app/index.html
@@ -24,8 +24,7 @@
   <script src="js/angular-ui-router.min.js"></script>
   <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/grafica.js"></script>
-  <script src="http://code.highcharts.com/stock/highstock.js"></script>
-  <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+  <script src="js/highstock.js"></script>
+  <script src="js/exporting.js"></script>
 </body>
 </html>
